--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #DCDBD5;
-  --foreground: #212121;
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
 @theme inline {
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #DCDBD5;
-    --foreground: #212121;
+    --background: #0a0a0a;
+    --foreground: #ededed;
   }
 }
 
